# Kratos-Red

./: README.md  startup.sh
dongle/: CMakeLists.txt  flash_usb_clean.sh  prj.conf
dongle_central/: CMakeLists.txt  dtc_shell.overlay  flash_usb.sh  prj.conf
dongle_drivers/: bsu_hci.c  bsu_hci.h  dongle.c  dongle.h
dongle_drivers/central_driver/: central.c  central.h
dongle_drivers/peripheral_driver/: peripheral.c  peripheral.h
dongle_peripheral/: CMakeLists.txt  prj.conf
gui/: datalog.py  gui.py  mmWaveProcessing.py  parser_mmw_demo.py
gui/Test/: helpForHayden.py
mmwave_cfgs/: AWR1843config.cfg  radar_config2.cfg
rpi_drivers/: embedded.py
